# parse-bubble-app-export

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.agents/: credit_governor.md
.agents/instructions/: architectural_decisions.md  development_conventions.md  output_contract.md  project_overview.md
.agents/workflows/: run_parser.md  run_tests.md  setup.md
parser/: __init__.py  agent_index.py  apis.py  cli.py  follow_up.py  loader.py  manifest.py  models.py  normalizer.py  path_utils.py  plugins.py  semantic.py  splitter.py
tests/: test_agent_index.py  test_apis.py  test_cli.py  test_follow_up.py  test_loader.py  test_normalizer.py  test_plugins.py  test_splitter.py
tests/fixtures/: export_dict_shape.json  export_list_shape.json
