[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble-export-parser"
version = "0.1.0"
description = "Parse and split Bubble export files for migration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["parser"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
